상세박스 닫기 버튼 활성화 상세박스 만들어질 때 선 안그려지는 오류 수정

--- a/SciFiConsoleWpf/MainWindow.xaml
+++ b/SciFiConsoleWpf/MainWindow.xaml
@@ -324,7 +324,7 @@
                               MouseWheelZoomType="MousePositionWithoutCenter"
                               CanDragMap="True" />
 
-                    <Canvas x:Name="HudOverlay" IsHitTestVisible="False"/>
+                    <Canvas x:Name="HudOverlay" IsHitTestVisible="True"/>
 
 
                 </Grid>
