--- a/SciFiConsoleWpf/MainWindow.xaml
+++ b/SciFiConsoleWpf/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SciFiConsoleWpf"
         xmlns:gmap="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
+        xmlns:vlc="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
         mc:Ignorable="d"
         Closing="Window_Closing"
         Title="SCIFICONSOLE" Height="800" Width="1600" WindowState="Maximized" WindowStyle="SingleBorderWindow" ResizeMode="NoResize" Background="#050A12">
@@ -332,13 +333,18 @@
 
                 <!-- ========== Layer 2 : VIDEO ========== -->
                 <Grid x:Name="LayerVideo" Visibility="Collapsed">
-                    <Border BorderBrush="#00E4FF" BorderThickness="1">
-                        <!-- 나중에 GStreamer, VLCSharp, FFmpeg 넣을 자리 -->
-                        <TextBlock Text="VIDEO STREAM HERE"
-                           Foreground="{StaticResource TextPrimary}"
-                           FontSize="20"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"/>
+                    <Border BorderBrush="#00E4FF" BorderThickness="1" Margin="4">
+                        <Grid>
+                            <!-- 네트워크 스트림용 VLC -->
+                            <vlc:VideoView x:Name="VideoViewControl"
+                               HorizontalAlignment="Stretch"
+                               VerticalAlignment="Stretch" />
+
+                            <!-- 로컬 카메라용 Image -->
+                            <Image x:Name="CameraImage"
+                               Stretch="Uniform"
+                               Visibility="Collapsed" />
+                        </Grid>
                     </Border>
                 </Grid>
 
@@ -429,6 +435,45 @@
                     Width="80"
                     Style="{StaticResource SciFiButton}"
                     Click="btnTrack_Click"/>
+                </StackPanel>
+            </Border>
+            <!-- VIDEO 소스 선택 패널 -->
+            <Border x:Name="VideoSourcePanel"
+                    Style="{StaticResource ModulePanel}"
+                    Height="150"
+                    Visibility="Collapsed">
+                <StackPanel Margin="4">
+                    <TextBlock Text="VIDEO SOURCE"
+                       Foreground="{StaticResource TextPrimary}"
+                       FontSize="11"
+                       FontWeight="Bold"
+                       Margin="0,0,0,4"/>
+
+                    <!-- 카메라/URL 목록 -->
+                    <ComboBox x:Name="cmbVideoSource"
+                      SelectionChanged="cmbVideoSource_SelectionChanged"
+                      Margin="0,0,0,4"/>
+
+                    <!-- URL 입력 (Network Stream 선택 시 표시) -->
+                    <TextBox x:Name="txtStreamUrl"
+                         Visibility="Collapsed"
+                         Margin="0,0,0,4"
+                         FontSize="11"
+                         Text="rtsp://..." />
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button x:Name="btnConnectVideo"
+                            Content="CONNECT"
+                            Width="80"
+                            Style="{StaticResource SciFiButton}"
+                            Click="btnConnectVideo_Click"/>
+                        <Button x:Name="btnStopVideo"
+                        Content="STOP"
+                        Width="60"
+                        Margin="4,0,0,0"
+                        Style="{StaticResource SciFiButton}"
+                        Click="btnStopVideo_Click"/>
+                    </StackPanel>
                 </StackPanel>
             </Border>
         </StackPanel>
